Se organiza la altura y ancho del iframe para los postcast

--- a/sprin1/index.html
+++ b/sprin1/index.html
@@ -51,12 +51,23 @@
                 <div class="pc"><img src="/images/embed3.png" alt="spotify_3"></div>
                 <div class="pc"><img src="/images/embed4.png" alt="spotify_4"></div>
 
-                <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" width="100%"
-                    height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <div class="movile embed-container">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div class="movile embed-container"><iframe
+                        src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
 
-                <div class="movile"><img src="/images/embed2_.png" alt="spotify_2"></div>
-                <div class="movile"><img src="/images/embed3_.png" alt="spotify_3"></div>
-                <div class="movile"><img src="/images/embed3_.png" alt="spotify_4"></div>
+                <div class="movile embed-container"><iframe
+                        src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
+                        allowtransparency="true" allow="encrypted-media"></iframe></iframe>
+                </div>
+                <div class="movile embed-container">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
 
             </article>
         </section>
