Se corrigen problemas de visibilidad en vista movil de iframe

--- a/sprin1/index.html
+++ b/sprin1/index.html
@@ -33,6 +33,7 @@
         </nav>
 
     </header>
+
     <main class="grid_main">
 
         <section class="contenido title " id="title">
@@ -46,27 +47,52 @@
             <article>
                 <h2> Episodios</h2>
 
-                <div class="pc"><img src="/images/embed1.png" alt="spotify_1"></div>
-                <div class="pc"><img src="/images/embed2.png" alt="spotify_2"></div>
-                <div class="pc"><img src="/images/embed3.png" alt="spotify_3"></div>
-                <div class="pc"><img src="/images/embed4.png" alt="spotify_4"></div>
+                <div class="pc embed-container">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt"
+                        allowtransparency="true" allow="encrypted-media">
+                    </iframe>
+                </div>
+
+                <div class="pc embed-container">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt"
+                        allowtransparency="true" allow="encrypted-media">
+                    </iframe>
+                </div>
+
+                <div class="pc embed-container">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
+                        allowtransparency="true" allow="encrypted-media">
+                    </iframe>
+                </div>
+
+                <div class="pc embed-container">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ"
+                        allowtransparency="true" allow="encrypted-media">
+                    </iframe>
+                </div>
 
                 <div class="movile embed-container">
                     <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
-                </div>
-                <div class="movile embed-container"><iframe
-                        src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                        allowtransparency="true" allow="encrypted-media">
+                    </iframe>
                 </div>
 
-                <div class="movile embed-container"><iframe
-                        src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
-                        allowtransparency="true" allow="encrypted-media"></iframe></iframe>
+                <div class="movile embed-container">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt"
+                        allowtransparency="true" allow="encrypted-media">
+                    </iframe>
                 </div>
+
+                <div class="movile embed-container">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
+                        allowtransparency="true" allow="encrypted-media">
+                    </iframe>
+                </div>
+
                 <div class="movile embed-container">
                     <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ"
-                        allowtransparency="true" allow="encrypted-media"></iframe>
+                        allowtransparency="true" allow="encrypted-media">
+                    </iframe>
                 </div>
 
             </article>
