Se genera menu amburguesa en el nav basado en el ejemplo de clase

--- a/sprin1/index.html
+++ b/sprin1/index.html
@@ -22,15 +22,20 @@
 
         <img src="/images/logo.svg" alt="logo">
         <nav>
-            <ul class="menu">
-                <li>episodios</li>
-                <li>nosotros</li>
-                <li>entrevistas</li>
-                <li>topicos</li>
-            </ul>
-
-            <i class="fa fa-bars menu_movil" aria-hidden="true"></i>
+            <div class="menu">
+                <input type="checkbox" id="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul>
+                    <li><a href="#episodios">episodios</a></li>
+                    <li><a href="#nosotros">nosotros</a></li>
+                    <li><a href="#entrevistas">entrevistas</a></li>
+                    <li><a href="#topicos">topicos</a></li>
+                </ul>
+            </div>
         </nav>
+
 
     </header>
 
