--- a/sprin1/index.html
+++ b/sprin1/index.html
@@ -45,7 +45,7 @@
             <h1>Hello <span>world</span> pale blue dot.</h1>
             <P>Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.
             </P>
-            <div>conocé más</div>
+            <div class="btn">conocé más</div>
         </section>
 
         <section class="contenido episodios oblicuo " id="episodios">
@@ -112,6 +112,7 @@
                 <p>Our posturings, our imagined self-importance, the delusion that we have some privileged position in
                     the Universe, are
                     challenged by this point of pale light.
+                    <br>
                     Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this
                     vastness, there is no
                     hint that help will come from elsewhere to save us from ourselves.
@@ -138,16 +139,19 @@
                 <h2>Algunos de nuestros temas</h2>
                 <img src="/images/icon1.svg" alt="Trabajo_Remoto">
                 <p>Trabajo remoto</p>
-                <img src="/images/icon1.svg" alt="Repensando la programación">
-                <p>Repensando la programación</p>
+                <img src="/images/icon2.svg" alt="Repensando la programación">
+                <p class="p65">Repensando la programación</p>
                 <img src="/images/icon3.svg" alt="Bases del código">
-                <p>Bases del código</p>
+                <p class="p65">Bases del código</p>
                 <img src="/images/icon4.svg" alt="Seguridad informática">
-                <p>Seguridad informática</p>
+                <p class="p42">Seguridad informática</p>
             </article>
-            <article class="oblicuo">
-                <h2>¿Querés las últimas novedades?</h2>
-                <div>ESCUCHÁ LOS EPISODIOS</div>
+
+            <article class=" novedades">
+                <div class="oblicuo">
+                    <h2>¿Querés las últimas novedades?</h2>
+                    <div class="btn">ESCUCHÁ LOS EPISODIOS</div>
+                </div>
             </article>
         </section>
     </main>
@@ -155,11 +159,11 @@
         <section>
             <p>© 2019— Hello blue pale dot</p>
             <ul>
-                <li><i class="fa fa-spotify" aria-hidden="true"></i></li>
-                <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
-                <li><i class="fa fa-facebook-official" aria-hidden="true"></i></li>
-                <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-                <li><i class="fa fa-telegram" aria-hidden="true"></i></li>
+                <li><a><i class="fa fa-spotify" aria-hidden="true"></a></i></li>
+                <li><a> <i class="fa fa-instagram" aria-hidden="true"></a></i></li>
+                <li><a> <i class="fa fa-facebook-official" aria-hidden="true"></a></i></li>
+                <li><a> <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a> <i class="fa fa-telegram" aria-hidden="true"></i></a></li>
             </ul>
         </section>
     </footer>
