Se adecuan cambios a todas las vistas, solo queda pendiente agregar los link a los botones

--- a/sprin1/index.html
+++ b/sprin1/index.html
@@ -42,9 +42,11 @@
     <main class="grid_main">
 
         <section class="title " id="title">
-            <h1>Hello <span>world</span> pale blue dot.</h1>
-            <P>Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.
-            </P>
+            <h1>Hello <span>world</span> pale blue dot<spam class="punto_color">.</spam>
+            </h1>
+            <P class="style_parrafo">El portal de podcasts que explora el mundo de la programación<span></span> Nuevos
+                episodios, todos los jueves cada
+                15 días. </P>
             <div class="btn">conocé más</div>
         </section>
 
@@ -53,50 +55,42 @@
             <article>
                 <h2 class="Pod_title"> Episodios</h2>
                 <div class="pc Pod1">
-                    <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt"
-                        allowtransparency="true" allow="encrypted-media">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt">
                     </iframe>
                 </div>
 
                 <div class="pc Pod2">
-                    <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt"
-                        allowtransparency="true" allow="encrypted-media">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt">
                     </iframe>
                 </div>
 
                 <div class="pc Pod3">
-                    <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
-                        allowtransparency="true" allow="encrypted-media">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD">
                     </iframe>
                 </div>
 
                 <div class="pc Pod4">
-                    <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ"
-                        allowtransparency="true" allow="encrypted-media">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ">
                     </iframe>
                 </div>
 
                 <div class="movile ">
-                    <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt"
-                        allowtransparency="true" allow="encrypted-media">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt">
                     </iframe>
                 </div>
 
                 <div class="movile ">
-                    <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt"
-                        allowtransparency="true" allow="encrypted-media">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt">
                     </iframe>
                 </div>
 
                 <div class="movile ">
-                    <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
-                        allowtransparency="true" allow="encrypted-media">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD">
                     </iframe>
                 </div>
 
                 <div class="movile padding_Phone">
-                    <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ"
-                        allowtransparency="true" allow="encrypted-media">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ">
                     </iframe>
                 </div>
 
