Se corrigen errores al poner las etiqueas a con los links a las paginas, con esto queda por teminada la pagina se espera comentarios de acamica

--- a/sprin1/index.html
+++ b/sprin1/index.html
@@ -47,7 +47,7 @@
             <P class="style_parrafo">El portal de podcasts que explora el mundo de la programación<span></span> Nuevos
                 episodios, todos los jueves cada
                 15 días. </P>
-            <div class="btn">conocé más</div>
+            <div class="btn"> <a href="https://www.danielprimo.io/podcast">conocé más</a></div>
         </section>
 
         <section class="episodios oblicuo " id="episodios">
@@ -153,7 +153,8 @@
             <article class=" novedades">
                 <div class="oblicuo">
                     <h2>¿Querés las últimas novedades?</h2>
-                    <div class="btn">ESCUCHÁ LOS EPISODIOS</div>
+                    <div class="btn"> <a href="https://open.spotify.com/show/2ySVrxGkN6n6frMTo9Nsrt  "> ESCUCHÁ LOS
+                            EPISODIOS</a></div>
                 </div>
             </article>
         </section>
@@ -162,11 +163,15 @@
         <section>
             <p>© 2019— Hello blue pale dot</p>
             <ul>
-                <li><a><i class="fa fa-spotify" aria-hidden="true"></a></i></li>
-                <li><a> <i class="fa fa-instagram" aria-hidden="true"></a></i></li>
-                <li><a> <i class="fa fa-facebook-official" aria-hidden="true"></a></i></li>
-                <li><a> <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a> <i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+                <li><a href="https://open.spotify.com/show/38fieckNwjpqWTtiPwiJ4i"><i class="fa fa-spotify"
+                            aria-hidden="true"></a></i></li>
+                <li><a href=" https://www.instagram.com/soydalto/ "> <i class="fa fa-instagram"
+                            aria-hidden="true"></a></i></li>
+                <li><a href="https://web.facebook.com/ProgrammersOficial"> <i class="fa fa-facebook-official"
+                            aria-hidden="true"></a></i></li>
+                <li><a href="https://twitter.com/pysm_y"> <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="https://tlgrm.eu/channels/@webdel"> <i class="fa fa-telegram" aria-hidden="true"></i></a>
+                </li>
             </ul>
         </section>
     </footer>
