--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="grid_body">
     <header>
 
-        <img src="/images/logo.svg" alt="logo">
+        <img src="images/logo.svg" alt="logo">
         <nav>
             <div class="menu">
                 <input type="checkbox" id="checkbox" />
@@ -100,7 +100,7 @@
         <div class="nosotros " id="nosotros">
             <article>
                 <div class="phone_over">
-                    <img src="/images/phone.png" alt="Women_In_Coding">
+                    <img src="images/phone.png" alt="Women_In_Coding">
                 </div>
                 <div>
                     <h2>De dónde venimos</h2>
@@ -120,15 +120,15 @@
         <section class="entrevistas " id="entrevistas">
             <article>
                 <h2>Invitadas/os estelares</h2>
-                <div><img class="width_responsive" src="/images/grace-hopper.png" alt="grace-hopper"> </div>
-                <div><img class="width_responsive" src="/images/Katie-Bouman.png" alt="Katie-Bouman"> </div>
-                <div><img class="width_responsive" src="/images/Margaret_Hamilton.png" alt="Margaret_Hamilton"> </div>
-                <div><img class="width_responsive" src="/images/An_E.R.A.Univac_1103_computer_in_the_1950s.png"
+                <div><img class="width_responsive" src="images/grace-hopper.png" alt="grace-hopper"> </div>
+                <div><img class="width_responsive" src="images/Katie-Bouman.png" alt="Katie-Bouman"> </div>
+                <div><img class="width_responsive" src="images/Margaret_Hamilton.png" alt="Margaret_Hamilton"> </div>
+                <div><img class="width_responsive" src="images/An_E.R.A.Univac_1103_computer_in_the_1950s.png"
                         alt="area_1103"> </div>
                 <div><img class="width_responsive"
                         src="/images/Computer_operators_with_an_Eniac—the_world’s_first_programmable_general-purpose_computer.png"
                         alt="general-purpose"> </div>
-                <div><img class="width_responsive" src="/images/susan-kare.png" alt="susan-kare"> </div>
+                <div><img class="width_responsive" src="images/susan-kare.png" alt="susan-kare"> </div>
             </article>
         </section>
 
@@ -136,16 +136,16 @@
             <article>
                 <h2>Algunos de nuestros temas</h2>
                 <div>
-                    <img class="img1" src="/images/icon1.svg" alt="Trabajo_Remoto">
+                    <img class="img1" src="images/icon1.svg" alt="Trabajo_Remoto">
                     <p class="P_1">Trabajo remoto</p>
 
-                    <img class="img2" src="/images/icon2.svg" alt="Repensando la programación">
+                    <img class="img2" src="images/icon2.svg" alt="Repensando la programación">
                     <p class="p65 P_2">Repensando la programación</p>
 
-                    <img class="img3" src="/images/icon3.svg" alt="Bases del código">
+                    <img class="img3" src="images/icon3.svg" alt="Bases del código">
                     <p class="p65 P_3">Bases del código</p>
 
-                    <img class="img4" src="/images/icon4.svg" alt="Seguridad informática">
+                    <img class="img4" src="images/icon4.svg" alt="Seguridad informática">
                     <p class="p42 P_4">Seguridad informática</p>
                 </div>
 
