--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Podcast</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <!--Tipografia-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!-- Tipografia : IBMPlexMono  - IBMPlexMonoMedium -->
@@ -20,7 +20,7 @@
 <body class="grid_body">
     <header>
 
-        <img src="images/logo.svg" alt="logo">
+        <img src="./images/logo.svg" alt="logo">
         <nav>
             <div class="menu">
                 <input type="checkbox" id="checkbox" />
@@ -42,7 +42,7 @@
     <main class="grid_main">
 
         <section class="title " id="title">
-            <h1>Hello <span>world</span> pale blue dot<span class="punto_color">.</span>
+            <h1>Hello <span>world</span> pale blue dot<spam class="punto_color">.</spam>
             </h1>
             <P class="style_parrafo">El portal de podcasts que explora el mundo de la programación<span></span> Nuevos
                 episodios, todos los jueves cada
@@ -97,10 +97,10 @@
             </article>
         </section>
 
-        <div class="nosotros " id="nosotros">
+        <section class="nosotros " id="nosotros">
             <article>
                 <div class="phone_over">
-                    <img src="images/phone.png" alt="Women_In_Coding">
+                    <img src="./images/phone.png" alt="Women_In_Coding">
                 </div>
                 <div>
                     <h2>De dónde venimos</h2>
@@ -115,20 +115,19 @@
                     </p>
                 </div>
             </article>
-        </div>
+        </section>
 
         <section class="entrevistas " id="entrevistas">
             <article>
                 <h2>Invitadas/os estelares</h2>
-                <div><img class="width_responsive" src="images/grace-hopper.png" alt="grace-hopper"> </div>
-                <div><img class="width_responsive" src="images/Katie-Bouman.png" alt="Katie-Bouman"> </div>
-                <div><img class="width_responsive" src="images/Margaret_Hamilton.png" alt="Margaret_Hamilton"> </div>
-                <div><img class="width_responsive" src="images/An_E.R.A.Univac_1103_computer_in_the_1950s.png"
-                        alt="area_1103"> </div>
-                <div><img class="width_responsive"
-                        src="/images/Computer_operators_with_an_Eniac—the_world’s_first_programmable_general-purpose_computer.png"
+                <div><img src="./images/grace-hopper.png" alt="grace-hopper"> </div>
+                <div><img src="./images/Katie-Bouman.png" alt="Katie-Bouman"> </div>
+                <div><img src="./images/Margaret_Hamilton.png" alt="Margaret_Hamilton"> </div>
+                <div><img src="./images/An_E.R.A.Univac_1103_computer_in_the_1950s.png" alt="area_1103"> </div>
+                <div><img
+                        src="./images/Computer_operators_with_an_Eniac—the_world’s_first_programmable_general-purpose_computer.png"
                         alt="general-purpose"> </div>
-                <div><img class="width_responsive" src="images/susan-kare.png" alt="susan-kare"> </div>
+                <div><img src="./images/susan-kare.png" alt="susan-kare"> </div>
             </article>
         </section>
 
@@ -136,16 +135,16 @@
             <article>
                 <h2>Algunos de nuestros temas</h2>
                 <div>
-                    <img class="img1" src="images/icon1.svg" alt="Trabajo_Remoto">
+                    <img class="img1" src="./images/icon1.svg" alt="Trabajo_Remoto">
                     <p class="P_1">Trabajo remoto</p>
 
-                    <img class="img2" src="images/icon2.svg" alt="Repensando la programación">
+                    <img class="img2" src="./images/icon2.svg" alt="Repensando la programación">
                     <p class="p65 P_2">Repensando la programación</p>
 
-                    <img class="img3" src="images/icon3.svg" alt="Bases del código">
+                    <img class="img3" src="./images/icon3.svg" alt="Bases del código">
                     <p class="p65 P_3">Bases del código</p>
 
-                    <img class="img4" src="images/icon4.svg" alt="Seguridad informática">
+                    <img class="img4" src="./images/icon4.svg" alt="Seguridad informática">
                     <p class="p42 P_4">Seguridad informática</p>
                 </div>
 
@@ -164,13 +163,15 @@
         <section>
             <p>© 2019— Hello blue pale dot</p>
             <ul>
-                <li><a href="https://open.spotify.com/show/38fieckNwjpqWTtiPwiJ4i"><i class="fa fa-spotify"></i></a>
+                <li><a href="https://open.spotify.com/show/38fieckNwjpqWTtiPwiJ4i"><i class="fa fa-spotify"
+                            aria-hidden="true"></a></i></li>
+                <li><a href=" https://www.instagram.com/soydalto/ "> <i class="fa fa-instagram"
+                            aria-hidden="true"></a></i></li>
+                <li><a href="https://web.facebook.com/ProgrammersOficial"> <i class="fa fa-facebook-official"
+                            aria-hidden="true"></a></i></li>
+                <li><a href="https://twitter.com/pysm_y"> <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="https://tlgrm.eu/channels/@webdel"> <i class="fa fa-telegram" aria-hidden="true"></i></a>
                 </li>
-                <li><a href=" https://www.instagram.com/soydalto/ "> <i class="fa fa-instagram"></i></a></li>
-                <li><a href="https://web.facebook.com/ProgrammersOficial"> <i class="fa fa-facebook-official"></i></a>
-                </li>
-                <li><a href="https://twitter.com/pysm_y"> <i class="fa fa-twitter"></i></a></li>
-                <li><a href="https://tlgrm.eu/channels/@webdel"> <i class="fa fa-telegram"></i></a></li>
             </ul>
         </section>
     </footer>
